<resources>
    <string name="app_name">Weather</string>
    <string name="an_error_occurred">An error occurred.</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="retry">Retry</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="daily_forecast">Daily forecast</string>
    <string name="search">Search</string>
    <string name="no_results">No results for %1$s</string>
    <string name="search_summary">Search by city name or district</string>
    <string name="set">Set</string>
    <string name="settings">Settings</string>
    <string name="temperature_unit">Temperature unit</string>
    <string name="celsius">Celsius (°C)</string>
    <string name="fahrenheit">Fahrenheit (°F)</string>
    <string name="temperature">%1$s°%2$s</string>
    <string name="feels_like">%1$s,\nfeels like %2$s°%3$s</string>
    <string name="kmh">%.1f km/h</string>
    <string name="ms">%.1f m/s</string>
    <string name="mph">%.1f mph</string>
    <string name="mb">%.2f mb</string>
    <string name="mmhg">%.2f mm Hg</string>
    <string name="server_timeout">Server timeout. Please try again later. If you are using a VPN, please disable it, it interferes with the app\'s operation.</string>
    <string name="no_internet_connection_please_try_again_later">No internet connection. Please try again later. If you are using a VPN, please disable it, it interferes with the app\'s operation.</string>
    <string name="cannot_connect_to_server">Cannot connect to server. Please try again later. If you are using a VPN, please disable it, it interferes with the app\'s operation.</string>
    <string name="pressure_unit">Pressure unit</string>
    <string name="wind_speed_unit">Wind speed unit</string>
    <string name="kmh_unit">km/h</string>
    <string name="ms_unit">m/s</string>
    <string name="mph_unit">mph</string>
    <string name="mb_unit">mb</string>
    <string name="mmhg_unit">mm Hg</string>
    <string name="language">Language</string>
    <string name="feedback">Feedback</string>
    <string name="app_version">App version</string>
    <string name="restart_the_app_to_apply_changes">Restart the app to apply changes.</string>
    <string name="widget_summary">%1$s\nfeels like %2$s°%3$s</string>
    <string name="loading">Loading…</string>
    <string name="weather_widget_description">See current weather in your city</string>
    <string name="clear_sky">Clear sky</string>
    <string name="mainly_clear">Mainly clear</string>
    <string name="partly_cloudy">Partly cloudy</string>
    <string name="overcast">Overcast</string>
    <string name="fog">Fog</string>
    <string name="light_drizzle">Light drizzle</string>
    <string name="moderate_drizzle">Moderate drizzle</string>
    <string name="dense_drizzle">Dense drizzle</string>
    <string name="freezing_drizzle">Freezing drizzle</string>
    <string name="slight_rain">Slight rain</string>
    <string name="moderate_rain">Moderate rain</string>
    <string name="heavy_rain">Heavy rain</string>
    <string name="freezing_rain">Freezing rain</string>
    <string name="slight_snow">Slight snow</string>
    <string name="moderate_snow">Moderate snow</string>
    <string name="heavy_snow">Heavy snow</string>
    <string name="snow_grains">Snow grains</string>
    <string name="slight_rain_showers">Slight rain showers</string>
    <string name="moderate_rain_showers">Moderate rain showers</string>
    <string name="violent_rain_showers">Violent rain showers</string>
    <string name="snow_showers">Snow showers</string>
    <string name="thunderstorm">Thunderstorm</string>
    <string name="thunderstorm_wit_hail">Thunderstorm with hail</string>
    <string name="unknown">Unknown</string>
    <string name="please_install_an_email_app">Please install an email app.</string>
    <string name="location_permission_message">Location permission did not granted.</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="uv_index" translatable="false">UV Index</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="very_high">Very high</string>
    <string name="extremely_high">Extremely high</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="warning_message">App works offline, data may not be up to date. Please, check your internet connection. If you are using a VPN, please disable it, it interferes with the app\'s operation.</string>
    <string name="forecast_widget_description">See 5-day weather forecast in your city</string>
    <string name="locations">Locations</string>
    <string name="current_weather">Current weather</string>
    <string name="forecast_weather">Forecast weather</string>
    <string name="default_">Default</string>
    <string name="other_locations">Other locations</string>
</resources>